2004-04-17  n1xt3r  <n1xt3r@scorcher>

	* plugins/rss.sh:
	Fixed checks for category feeds and rss item file generation.

	* nb, plugins/rss.sh: - Added support for category feeds to rss plugin.
	- Removed all functions and code related to rss feeds in nb.

	* ChangeLog, default/templates/rdf.xml, default/templates/rdf_catfeed.xml, default/templates/rdf_catfeedentry.xml, default/templates/rdf_entry.xml, nb, plugins/rss.sh:
	- (read_metadata): Added experimental support for content encoding.
	- Added a plugin for RSS feeds.
	- Modified rdf templates to include rdf:Seq.

2004-04-10  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, nb (show_help): Simplified wording in examples.

	* nb, ChangeLog (show_help): Minor improvements made to help info.

	* ChangeLog, nb (load_plugins):
	user plugins are now loaded before global plugins.

2004-04-09  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, plugins/atom.sh:
	Removed call to make_page function to fix loading of user plugins.

	* default/templates/atom.xml, default/templates/atom_entry.xml, plugins/atom.sh:
	- Added BLOG_TZD in atom feed plugin.
	- NB_AtomEntryModDate uses the find command.
	- More changes and some fixes were made to the atom feed templates.

	* ChangeLog, default/templates/atom.xml, default/templates/atom_entry.xml, plugins/atom.sh:
	Added new plugin and templates for atom feed.

	* ChangeLog, plugins/articles.off:
	- Changed article format to metadata tags: TITLE, DESC, and BODY.

2004-04-05  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, nb (build_blog):
	Fixed bug that caused all permalinks to be processed unconditionally.

	* plugins/master_index.sh, plugins/postformat/tidy.sh:
	- Replaced OUTPUT_FILE with MKPAGE_OUTFILE in tidy plugin.
	- Replaced call to nb with load_template in master archive plugin.

	* nb, plugins/articles.off, plugins/postformat/tidy.sh:
	- Changed PLUGIN_OUTFILE to PLUGIN_NAME_OUTFILE.
	- (make_page): Changed OUT_FILE to MKPAGE_OUTFILE.